force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>