force-app/main/default/objects/Answer__c/fields/AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>AnswerOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer Option</label>
    <referenceTo>AnswerOption__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>