force-app/main/default/objects/Answer__c/fields/QuestionResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionResponse__c</fullName>
    <label>Question Response</label>
    <referenceTo>QuestionResponse__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>