force-app/main/default/objects/Answer__c/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <label>Text Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>