force-app/main/default/objects/Answer__c/validationRules/ValidateAnswerLookup.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAnswerLookup</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( AnswerOption__c )),  AnswerOption__r.Question__c !=  QuestionResponse__r.Question__c )</errorConditionFormula>
    <errorMessage>The answer must belong to the same question.</errorMessage>
</ValidationRule>