force-app/main/default/objects/Answer__c/validationRules/ValidateAnswerRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAnswerRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(QuestionResponse__r.Question__r.Type__c, &#39;Matching Options&#39;)), ISBLANK( AnswerOption__c ))</errorConditionFormula>
    <errorDisplayField>AnswerOption__c</errorDisplayField>
    <errorMessage>The answer is required.</errorMessage>
</ValidationRule>